--- a/src/components/UserList.css
+++ b/src/components/UserList.css
@@ -6,3 +6,8 @@
   flex-wrap: wrap;
   margin: 10px;
 }
+.header-layout {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
